fix: delete manual height and width causing horizontal overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,7 @@ body {
   background-image: url("/assets/images/bg.webp");
   font-family: Ubuntu, Helvetica, Arial;
   color: #d7d7d7;
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
